# blueberry

./: .gitignore  Containerfile  GNUmakefile  Make.config  README.md
doc/: AARCH64.md  ARCHITECTURE.md  BBUILD.md  BPM-FORMAT.md  BPM-GUIDE.md  BPM-INTERNALS.md  BPM.md  BUILD.md  BUILDSERVER.md  CI.md  CONTRIBUTING.md  DEPLOY.md  EDITIONS.md  HOSTING.md  INIT.md  KERNEL.md  PACKAGES.md  PROMO-INSTAGRAM.md  ROADMAP.md  SECUREBOOT.md  SECURITY-AUDIT-2026-07.md  SECURITY.md  SYSTEMD-MIGRATION.md  WEBSITE.md  WEBUI.md
etc/: issue  issue.net  motd  nsswitch.conf  os-release
recipe-hub/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
release/: NOTES.md  isos.sha256
src/bbdev/: Cargo.toml  install.sh
src/bbdev/src/: main.rs
src/bpm-rs/: Cargo.toml  README.md  bpm.1
src/bpm-rs/src/: cache.rs  db.rs  index.rs  main.rs  net.rs  pkg.rs  repo.rs  repokey.rs  sig.rs
src/installer/: .gitignore  Cargo.toml  blueberry-install.c
src/installer/src/: boot.rs  disk.rs  engine.rs  main.rs  run.rs  tui.rs  ui.rs
tools/: blueberry-build-server.sh  blueberry-repo-sync.sh  boot-iso.sh  bpm-publish.sh  bpmbuild  bpmrepo.sh  build-bpm-pkg.sh  build-bpm.sh  build-in-container.sh  build-installer.sh  build-pkgs.sh  buildserver-provision.sh  bump-package.sh  bundle-glibc.sh  changed-packages.sh  check-closure.py  check-pkg-libs.sh  check-runtime-closure.py  fetch-bpm.sh  fetch-kernel.sh  mk-builder-image.sh  mkdesktopinstiso.sh  mkdesktopiso.sh  mkdisk.sh  mkiso.sh  mkrepo.sh  mkrepokey.sh  mkserveriso.sh  pkgbuild2bpm  publish-kernel.sh  qemu.sh  (+6 more)
(+200 files in other folders)
