[package]
name = "bpm"
version = "1.5.0"
edition = "2021"
description = "Blueberry Package Manager — Rust rewrite"
license = "MIT"

[[bin]]
name = "bpm"
path = "src/main.rs"

[dependencies]
ureq = "2"
zstd = "0.13"
tar = "0.4"
sha2 = "0.10"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
